    configured HostBaseDn.

  [ Joerg Jaspert ]
  * Enhance copyright file a bit, also adding a pointer to our repository
  * Add those utf8 headerlines to mail templates. Same "trick" as used in dak
    to send utf8 mails for people that need them. Works there - should work
    here too.

  [ Stephen Gran ]
  * ud-fingerserv: implement daemonize() for non-inetd mode.

 -- Joerg Jaspert <joerg@debian.org>  Fri, 28 Dec 2007 16:29:35 +0100

userdir-ldap (0.3.15) unstable; urgency=low

  * userdir_gpg.py: fix RT #70 (sub-key support for mail gateway)
  * change *PK* mechanism to Linux standard ! mechanism, and check for
    it in the mail gateway for changes, too.
  * change packaging to make use of python-support, simplyfing scripts
    greatly.
  * Remove obsolete ud-killcrypt that wouldn't work with modern ldap anyways.

 -- Ryan Murray <rmurray@debian.org>  Sun, 12 Aug 2007 13:38:11 -0600

userdir-ldap (0.3.14) unstable; urgency=low

  * ud-generate:
    . Establish *PK* as mechanism for locked accounts with mail forwarding intact.
      No subscription to debian-private though, and no way to log in
    . Support [NOPASSWD] for generating configs that only don't
      contain the password for untrusted hosts that should receive
      the other regular export (patch by Andreas Barth <aba@not.so.argh.org>)
  * ud-host:
    . Import the base DN from the configuration file (patch by Andreas
      Barth <aba@not.so.argh.org>)
  * ud-roleadd:
    . Improved admin output
  * Removed unused and obsolete whrandom module (ud-host, ud-info, ud.py)
  * Query the LDAP server if no locally defined group with that name was
    found (userdir_ldap.py, ud-useradd, ud-roleadd)
  * Preparations for being useful with the version of Python in etch

 -- Joey Schulze <joey@infodrom.org>  Sat, 11 Aug 2007 22:23:25 +0200

userdir-ldap (0.3.13) unstable; urgency=low

  * ud-generate: only look for *LK*, not the fingerprint when auto-disabling
    mail
