@@ -2,8 +2,8 @@ Source: userdir-ldap
 Section: admin
 Priority: optional
 Maintainer: Debian Administration team <debian-admin@lists.debian.org>
-Build-Depends: debhelper (>= 5), python-support (>= 0.3)
-Standards-Version: 3.5.8.0
+Build-Depends: debhelper (>= 5), python-support (>= 0.3), yodl
+Standards-Version: 3.7.3
 Uploaders: Ryan Murray <rmurray@debian.org>, Peter Palfrader <weasel@debian.org>
 
 Package: userdir-ldap
