@@ -1,0 +1,3 @@
+usr/share/python-support/userdir_ldap
+etc/userdir-ldap/templates
+etc/ldap/schema 
