@@ -1,0 +1,2 @@
+doc/slapd-config.txt
+doc/samples
