@@ -1,0 +1,25 @@
+userdir_ldap.pth usr/share/python-support/
+userdir_ldap.py usr/share/python-support/userdir_ldap/
+userdir_gpg.py usr/share/python-support/userdir_ldap/
+ud-forwardlist usr/bin
+ud-gpgimport usr/bin
+ud-info usr/bin
+ud-ldapshow usr/bin
+ud-userimport usr/bin
+ud-mailgate usr/bin
+ud-generate usr/bin
+ud-passchk usr/bin
+ud-useradd usr/bin
+ud-replicate usr/bin
+ud-xearth usr/bin
+ud-fingerserv usr/bin
+ud-echelon usr/bin
+ud-groupadd usr/bin
+ud-host usr/bin
+ud-zoneupdate usr/bin
+ud-roleadd usr/bin
+sigcheck usr/bin
+userdir-ldap.conf etc/userdir-ldap/
+generate.conf etc/userdir-ldap/
+templates/ etc/userdir-ldap/templates/
+userdir-ldap.schema etc/ldap/schema/
