@@ -1,0 +1,7 @@
+doc/ud-generate.8
+doc/ud-info.1
+doc/ud-useradd.8
+doc/ud-xearth.1
+doc/ud-gpgimport.8
+doc/ud-mailgate.8
+doc/ud-userimport.8
