@@ -3,51 +3,25 @@
 # Made with the aid of debmake, by Christoph Lameter,
 # based on the sample debian/rules file for GNU hello by Ian Jackson.
 
-package:=userdir-ldap
-i:=./debian/$(package)
-pysite:=usr/share/python-support
-
 build:
 	dh_testdir
 	touch build
+	$(MAKE) -C doc
 
 clean:
 	dh_testdir
-	-rm -f build
-	-find . -name '*.py[co]' | xargs rm -f
-	-rm -rf $(i) debian/files* core debian/substvars
-
-instdirs = \
-	usr/bin \
-	$(pysite)/userdir_ldap \
-	usr/share/doc/$(package)/samples \
-	etc/userdir-ldap/templates \
-	etc/cron.d \
-	etc/ldap/schema	
+	rm -f build
+	find . -name '*.py[co]' -print0 | xargs -0 --no-run-if-empty rm -f
+	$(MAKE) -C doc clean
+	dh_clean
 
 binary-indep: build
 	dh_testdir
 	dh_testroot
 	dh_clean -k
-	dh_installdirs $(instdirs)
-
-	echo "userdir_ldap" > $(i)/$(pysite)/userdir_ldap.pth
-	echo "userdir_gpg" >> $(i)/$(pysite)/userdir_ldap.pth
-	install -m 644 userdir_ldap.py userdir_gpg.py \
-		$(i)/$(pysite)/userdir_ldap/
-	install -m 755 {ud-forwardlist,ud-gpgimport,ud-info,ud-ldapshow,ud-userimport,ud-mailgate,ud-generate,ud-passchk,ud-useradd,ud-replicate,ud-xearth,ud-fingerserv,ud-echelon,ud-groupadd,ud-host,ud-zoneupdate,ud-roleadd} $(i)/usr/bin/
-	install -m 755 sigcheck $(i)/usr/bin/
-	install -m 644 debian/ud-replicate.cron.d $(i)/etc/cron.d/ud-replicate
-
-	install -m 644 doc/slapd-config.txt $(i)/usr/share/doc/$(package)
-	install -m 644 doc/samples/ud-* $(i)/usr/share/doc/$(package)/samples
-	gzip -9 $(i)/usr/share/doc/$(package)/*.txt
-	install -m 644 userdir-ldap.conf $(i)/etc/userdir-ldap/
-	echo "# See /usr/share/doc/userdir-ldap" > $(i)/etc/userdir-ldap/generate.conf
-	chmod 644 $(i)/etc/userdir-ldap/generate.conf
-	install -m 644 templates/*-* $(i)/etc/userdir-ldap/templates/
-	install -m 644 userdir-ldap.schema $(i)/etc/ldap/schema/
-
+	dh_installdirs
+	dh_install
+	dh_installcron --name=ud-replicate
 	dh_installdocs
 	dh_installchangelogs
 	dh_installman
@@ -56,12 +30,10 @@ binary-indep: build
 	dh_installdeb
 	dh_pysupport
 	dh_gencontrol
-#	dh_makeshlibs
 	dh_md5sums
 	dh_builddeb
 
 binary-arch: build
-	dh_testdir
 # There are no architecture-dependent files to be uploaded
 # generated by this package.  If there were any they would be
 # made here.
