@@ -1,0 +1,1 @@
+# See /usr/share/doc/userdir-ldap
