@@ -45,8 +45,16 @@ userdir-ldap (0.3.15+xxx) XXunstable; urgency=low
 
   [ Stephen Gran ]
   * ud-fingerserv: implement daemonize() for non-inetd mode.
+  * Packaging cleanup
+  * Use standard debhelper tools
+  * Create all files we ship instead of echoing them into creation at build
+    time
+  * Typo fix in copyright
+  * Update Standards-Version to 3.7.3 (no changes)
+  * Build manpages at build time (add Build-Depend on yodl)
+  * Install built manpages
 
- -- Joerg Jaspert <joerg@debian.org>  Fri, 28 Dec 2007 16:29:35 +0100
+ -- Stephen Gran <sgran@debian.org>  Mon, 07 Jan 2008 01:50:15 +0000
 
 userdir-ldap (0.3.15) unstable; urgency=low
 
